--- a/demo/style.css
+++ b/demo/style.css
@@ -5,6 +5,8 @@ body {
   color: white;
   text-align: center;
   min-height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 button {
@@ -101,10 +103,6 @@ input[type="radio"]:checked + .big-n-beautiful {
   background-color: #FFE01B;
 }
 
-input[type="range"] {
-  width: 100%;
-}
-
 
 .big-n-beautiful {
   font-size: 24px;
@@ -120,8 +118,8 @@ input[type="range"] {
   background-color: #C3AA0A;
 }
 
-#threshold {
-  max-width: 90%;
+.not-full-width {
+  width: 90%;
 }
 
 #buttery {
