--- a/reset.css
+++ b/reset.css
@@ -46,3 +46,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+
+input, button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button:focus, input:focus {
+  outline: none;
+}
