--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Patua One', cursive;
-  background-color: #5B2B00;
+  background-color: rgba(82, 101, 139, 0.77);
   color: white;
   text-align: center;
   min-height: 100%;
@@ -115,6 +115,7 @@ input[type="radio"]:checked + .big-n-beautiful {
   text-shadow: 2px 2px #C3AA0A;
   border: 2px solid #C3AA0A;
   color: white;
+  border-radius: 7px;
 }
 
 .big-n-beautiful.subtle {
@@ -124,6 +125,10 @@ input[type="radio"]:checked + .big-n-beautiful {
 .not-full-width {
   width: 90%;
   margin: 0 auto;
+}
+
+#threshold {
+  width: 98%;
 }
 
 #buttery {
@@ -159,12 +164,16 @@ input[type='range'] {
   background-color: #C3AA0A;
   height: 30px;
   vertical-align: middle;
+  border-radius: 4px;
+  padding: 3px;
 }
 
 input[type='range']::-moz-range-track {
   -moz-appearance: none;
   background-color: #C3AA0A;
   height: 30px;
+  border-radius: 4px;
+  padding: 3px;
 }
 
 input[type='range']::-webkit-slider-thumb {
@@ -172,6 +181,7 @@ input[type='range']::-webkit-slider-thumb {
   background-color: #FFE01B;
   height: 25px;
   width: 25px;
+  border-radius: 4px;
 }
 
 input[type='range']::-moz-range-thumb {
@@ -179,4 +189,5 @@ input[type='range']::-moz-range-thumb {
   background-color: #FFE01B;
   height: 25px;
   width: 25px;
+  border-radius: 4px;
 }
