use an <img> for the final product

--- a/demo/style.css
+++ b/demo/style.css
@@ -136,7 +136,7 @@ input[type="radio"]:checked + .big-n-beautiful {
   line-height: 42px;
   padding: 12px 32px;
   cursor: pointer;
-  transition: transform 50ms;
+  transition: transform color background-color 50ms;
 }
 
 #buttery:hover {
