--- a/style.css
+++ b/style.css
@@ -57,7 +57,14 @@ td {
 #sort-pixels {
   max-width: 100%;
   border: 2px solid #C3AA0A;
-  margin: 32px 0;
+  margin: 32px auto;
+  -webkit-transition: max-width 100ms, opacity 100ms;
+  transition: max-width 100ms, opacity 100ms;
+}
+
+#sort-pixels.dropping-file {
+  opacity: 0.4;
+  max-width: 90%;
 }
 
 
