--- a/style.css
+++ b/style.css
@@ -190,8 +190,19 @@ input[type='range'] {
   padding: 3px;
 }
 
+input[type='range']::-ms-track {
+  -ms-appearance: none;
+  border-color: transparent;
+  color: transparent;
+  background-color: #C3AA0A;
+  height: 30px;
+  border-radius: 4px;
+  padding: 3px;
+}
+
 input[type='range']::-moz-range-track {
   -moz-appearance: none;
+  border: none;
   background-color: #C3AA0A;
   height: 30px;
   border-radius: 4px;
@@ -206,8 +217,16 @@ input[type='range']::-webkit-slider-thumb {
   border-radius: 4px;
 }
 
+input[type=range]::-ms-thumb {
+  background-color: #FFE01B;
+  height: 25px;
+  width: 25px;
+  border-radius: 4px;
+}
+
 input[type='range']::-moz-range-thumb {
   -moz-appearance: none;
+  border: none;
   background-color: #FFE01B;
   height: 25px;
   width: 25px;
