--- a/demo/style.css
+++ b/demo/style.css
@@ -186,6 +186,16 @@ input[type='range'] {
   padding: 3px;
 }
 
+input[type='range']::-ms-track {
+  -ms-appearance: none;
+  border-color: transparent;
+  color: transparent;
+  background-color: #C3AA0A;
+  height: 30px;
+  border-radius: 4px;
+  padding: 3px;
+}
+
 input[type='range']::-moz-range-track {
   -moz-appearance: none;
   border: none;
@@ -197,6 +207,13 @@ input[type='range']::-moz-range-track {
 
 input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none !important;
+  background-color: #FFE01B;
+  height: 25px;
+  width: 25px;
+  border-radius: 4px;
+}
+
+input[type=range]::-ms-thumb {
   background-color: #FFE01B;
   height: 25px;
   width: 25px;
