--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ td {
   max-width: 100%;
   border: 2px solid #C3AA0A;
   margin: 32px auto;
-  -webkit-transition: max-width 100ms, opacity 100ms;
   transition: max-width 100ms, opacity 100ms;
 }
 
@@ -143,7 +142,7 @@ input[type="radio"]:checked + .big-n-beautiful {
   line-height: 42px;
   padding: 12px 32px;
   cursor: pointer;
-  -webkit-transition: -webkit-transform color background-color 50ms;
+  transition: -webkit-transform color background-color 50ms;
   transition: transform color background-color 50ms;
 }
 
@@ -231,4 +230,78 @@ input[type='range']::-moz-range-thumb {
   height: 25px;
   width: 25px;
   border-radius: 4px;
+}
+
+/* spinning */
+
+.spinner {
+  margin: 0 auto;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.spinner:before, .spinner:after {
+  content: '';
+  background-color: #FFE01B;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  -webkit-animation: cubemove 1.8s infinite ease-in-out;
+  animation: cubemove 1.8s infinite ease-in-out;
+}
+
+.spinner:after {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+@-webkit-keyframes cubemove {
+  25% { -webkit-transform: translateX(22px) rotate(-90deg) scale(0.5) }
+  50% { -webkit-transform: translateX(22px) translateY(22px) rotate(-180deg) }
+  75% { -webkit-transform: translateX(0px) translateY(22px) rotate(-270deg) scale(0.5) }
+  100% { -webkit-transform: rotate(-360deg) }
+}
+
+@keyframes cubemove {
+  25% {
+    transform: translateX(42px) rotate(-90deg) scale(0.5);
+    -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
+  } 50% {
+    /* Hack to make FF rotate in the right direction */
+    transform: translateX(42px) translateY(42px) rotate(-179deg);
+    -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
+  } 50.1% {
+    transform: translateX(42px) translateY(42px) rotate(-180deg);
+    -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
+  } 75% {
+    transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+    -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+  } 100% {
+    transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
+  }
+}
+
+#image-wrapper {
+  position: relative;
+}
+
+.spinner {
+  display: none;
+}
+
+.loading .spinner {
+  display: block;
+}
+
+.loading #sort-pixels {
+  opacity: 0.3;
 }
