--- a/style.css
+++ b/style.css
@@ -1,307 +1,1 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Patua One', cursive;
-  background-color: rgba(82, 101, 139, 0.77);
-  color: white;
-  text-align: center;
-  min-height: 100%;
-  overflow: hidden;
-  overflow-y: auto;
-}
-
-button {
-  font-family: 'Patua One', cursive;
-}
-
-header {
-  padding: 24px 0;
-  margin-bottom: 32px;
-  background-color: #FFE01B;
-  text-shadow: 3px 2px #C3AA0A;
-  border-bottom: 2px solid #C3AA0A;
-}
-
-h1 {
-  font-size: 48px;
-  line-height: 62px;
-}
-
-table {
-  width: 100%;
-}
-
-tr {
-  width: 100%;
-}
-
-td {
-  padding-bottom: 24px;
-}
-
-
-.content {
-  margin: 0 auto;
-  width: 900px;
-  max-width: 100%;
-}
-
-.inner-content {
-  margin: 0 auto;
-  width: 500px;
-  max-width: 100%;
-}
-
-#sort-pixels {
-  max-width: 100%;
-  border: 2px solid #C3AA0A;
-  margin: 32px auto;
-  transition: max-width 100ms, opacity 100ms;
-}
-
-#sort-pixels.dropping-file {
-  opacity: 0.4;
-  max-width: 90%;
-}
-
-
-.form-section {
-  margin: 18px auto;
-}
-
-.file-wrapper {
-  position: relative;
-  cursor: pointer;
-}
-
-.file-wrapper > input[type="file"] {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
-  opacity: 0;
-}
-
-
-label, input {
-  cursor: pointer;
-}
-
-label {
-  display: inline-block;
-  width: 95%;
-}
-
-.comfy {
-  padding: 12px;
-}
-
-.comfy-vertical {
-  padding: 12px 0;
-}
-
-input[type="radio"] {
-  display: none;
-}
-
-input[type="radio"]:checked + .big-n-beautiful {
-  background-color: #FFE01B;
-}
-
-
-.big-n-beautiful {
-  font-size: 24px;
-  line-height: 32px;
-  letter-spacing: 0.02em;
-  background-color: #FFE01B;
-  text-shadow: 2px 2px #C3AA0A;
-  border: 2px solid #C3AA0A;
-  color: white;
-  border-radius: 7px;
-}
-
-.big-n-beautiful.subtle {
-  background-color: #C3AA0A;
-}
-
-.not-full-width {
-  width: 90%;
-  margin: 0 auto;
-}
-
-#threshold {
-  width: 98%;
-}
-
-#buttery {
-  font-size: 32px;
-  line-height: 42px;
-  padding: 12px 32px;
-  cursor: pointer;
-  transition: -webkit-transform color background-color 50ms;
-  transition: transform color background-color 50ms;
-}
-
-#buttery:hover {
-  -webkit-transform: translate(0, -2px);
-  transform: translate(0, -2px);
-}
-
-#buttery:active {
-  -webkit-transform: translate(0, 1px);
-  transform: translate(0, 1px);
-  background-color: #C3AA0A;
-  color: #eee;
-}
-
-#reset-img {
-  margin: 12px 0;
-}
-
-.text-button {
-  border: none;
-  background-color: transparent;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;;
-  color: white;
-  font-size: 16px;
-}
-
-.text-button:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.github {
-  width: 64px;
-  margin: 32px 0;
-}
-
-input[type='range'] {
-  -webkit-appearance: none;
-  background-color: #C3AA0A;
-  height: 30px;
-  vertical-align: middle;
-  border-radius: 4px;
-  padding: 3px;
-}
-
-input[type='range']::-ms-track {
-  -ms-appearance: none;
-  border-color: transparent;
-  color: transparent;
-  background-color: #C3AA0A;
-  height: 30px;
-  border-radius: 4px;
-  padding: 3px;
-}
-
-input[type='range']::-moz-range-track {
-  -moz-appearance: none;
-  border: none;
-  background-color: #C3AA0A;
-  height: 30px;
-  border-radius: 4px;
-  padding: 3px;
-}
-
-input[type='range']::-webkit-slider-thumb {
-  -webkit-appearance: none !important;
-  background-color: #FFE01B;
-  height: 25px;
-  width: 25px;
-  border-radius: 4px;
-}
-
-input[type=range]::-ms-thumb {
-  background-color: #FFE01B;
-  height: 25px;
-  width: 25px;
-  border-radius: 4px;
-}
-
-input[type='range']::-moz-range-thumb {
-  -moz-appearance: none;
-  border: none;
-  background-color: #FFE01B;
-  height: 25px;
-  width: 25px;
-  border-radius: 4px;
-}
-
-/* spinning */
-
-.spinner {
-  margin: 0 auto;
-  width: 32px;
-  height: 32px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.spinner:before, .spinner:after {
-  content: '';
-  background-color: #FFE01B;
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  -webkit-animation: cubemove 1.8s infinite ease-in-out;
-  animation: cubemove 1.8s infinite ease-in-out;
-}
-
-.spinner:after {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
-}
-
-@-webkit-keyframes cubemove {
-  25% { -webkit-transform: translateX(22px) rotate(-90deg) scale(0.5) }
-  50% { -webkit-transform: translateX(22px) translateY(22px) rotate(-180deg) }
-  75% { -webkit-transform: translateX(0px) translateY(22px) rotate(-270deg) scale(0.5) }
-  100% { -webkit-transform: rotate(-360deg) }
-}
-
-@keyframes cubemove {
-  25% {
-    transform: translateX(42px) rotate(-90deg) scale(0.5);
-    -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
-  } 50% {
-    /* Hack to make FF rotate in the right direction */
-    transform: translateX(42px) translateY(42px) rotate(-179deg);
-    -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
-  } 50.1% {
-    transform: translateX(42px) translateY(42px) rotate(-180deg);
-    -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
-  } 75% {
-    transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-    -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-  } 100% {
-    transform: rotate(-360deg);
-    -webkit-transform: rotate(-360deg);
-  }
-}
-
-#image-wrapper {
-  position: relative;
-}
-
-.spinner {
-  display: none;
-}
-
-.loading .spinner {
-  display: block;
-}
-
-.loading #sort-pixels {
-  opacity: 0.3;
-}
+*{box-sizing:border-box}body{font-family:'Patua One',cursive;background-color:rgba(82,101,139,.77);color:#fff;text-align:center;min-height:100%;overflow:hidden;overflow-y:auto}button{font-family:'Patua One',cursive}header{padding:24px 0;margin-bottom:32px;background-color:#FFE01B;text-shadow:3px 2px #C3AA0A;border-bottom:2px solid #C3AA0A}h1{font-size:48px;line-height:62px}table,tr{width:100%}td{padding-bottom:24px}.content{margin:0 auto;width:900px;max-width:100%}.inner-content{margin:0 auto;width:500px;max-width:100%}#sort-pixels{max-width:100%;border:2px solid #C3AA0A;margin:32px auto;transition:max-width 100ms,opacity 100ms}#sort-pixels.dropping-file{opacity:.4;max-width:90%}.form-section{margin:18px auto}.file-wrapper{position:relative;cursor:pointer}.file-wrapper>input[type=file]{position:absolute;cursor:pointer;top:0;left:0;min-width:100%;min-height:100%;opacity:0}input,label{cursor:pointer}label{display:inline-block;width:95%}.comfy{padding:12px}.comfy-vertical{padding:12px 0}input[type=radio]{display:none}input[type=radio]:checked+.big-n-beautiful{background-color:#FFE01B}.big-n-beautiful{font-size:24px;line-height:32px;letter-spacing:.02em;background-color:#FFE01B;text-shadow:2px 2px #C3AA0A;border:2px solid #C3AA0A;color:#fff;border-radius:7px}.big-n-beautiful.subtle{background-color:#C3AA0A}.not-full-width{width:90%;margin:0 auto}#threshold{width:98%}#buttery{font-size:32px;line-height:42px;padding:12px 32px;cursor:pointer;transition:-webkit-transform color background-color 50ms;transition:transform color background-color 50ms}#buttery:hover{-webkit-transform:translate(0,-2px);transform:translate(0,-2px)}#buttery:active{-webkit-transform:translate(0,1px);transform:translate(0,1px);background-color:#C3AA0A;color:#eee}#reset-img{margin:12px 0}.text-button{border:none;background-color:transparent;font-family:HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;color:#fff;font-size:16px}.text-button:hover{text-decoration:underline;cursor:pointer}.github{width:64px;margin:32px 0}input[type=range]{-webkit-appearance:none;background-color:#C3AA0A;height:30px;vertical-align:middle;border-radius:4px;padding:3px}input[type=range]::-ms-track{-ms-appearance:none;border-color:transparent;color:transparent;background-color:#C3AA0A;height:30px;border-radius:4px;padding:3px}input[type=range]::-moz-range-track{-moz-appearance:none;border:none;background-color:#C3AA0A;height:30px;border-radius:4px;padding:3px}input[type=range]::-webkit-slider-thumb{-webkit-appearance:none!important;background-color:#FFE01B;height:25px;width:25px;border-radius:4px}input[type=range]::-ms-thumb{background-color:#FFE01B;height:25px;width:25px;border-radius:4px}input[type=range]::-moz-range-thumb{-moz-appearance:none;border:none;background-color:#FFE01B;height:25px;width:25px;border-radius:4px}.spinner{margin:0 auto;width:32px;height:32px;position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%)}.spinner:after,.spinner:before{content:'';background-color:#FFE01B;width:10px;height:10px;position:absolute;top:0;left:0;-webkit-animation:cubemove 1.8s infinite ease-in-out;animation:cubemove 1.8s infinite ease-in-out}.spinner:after{-webkit-animation-delay:-.9s;animation-delay:-.9s}@-webkit-keyframes cubemove{25%{-webkit-transform:translateX(22px) rotate(-90deg) scale(0.5)}50%{-webkit-transform:translateX(22px) translateY(22px) rotate(-180deg)}75%{-webkit-transform:translateX(0px) translateY(22px) rotate(-270deg) scale(0.5)}100%{-webkit-transform:rotate(-360deg)}}@keyframes cubemove{25%{transform:translateX(42px) rotate(-90deg) scale(0.5);-webkit-transform:translateX(42px) rotate(-90deg) scale(0.5)}50%{transform:translateX(42px) translateY(42px) rotate(-179deg);-webkit-transform:translateX(42px) translateY(42px) rotate(-179deg)}50.1%{transform:translateX(42px) translateY(42px) rotate(-180deg);-webkit-transform:translateX(42px) translateY(42px) rotate(-180deg)}75%{transform:translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);-webkit-transform:translateX(0px) translateY(42px) rotate(-270deg) scale(0.5)}100%{transform:rotate(-360deg);-webkit-transform:rotate(-360deg)}}#image-wrapper{position:relative}.spinner{display:none}.loading .spinner{display:block}.loading #sort-pixels{opacity:.3}
